2002-04-22  Jody Goldberg <jody@gnome.org>

	* service-edit-dialog.c (service_edit_dialog_set_prop) : set dialog
	  title correctly when adding a service.
	* mime-edit-dialog.c (mime_edit_dialog_set_prop) : ditto.

2002-04-21  Jody Goldberg <jody@gnome.org>

	* service-info.c (fill_service_apps) : Use the new hook in
	  gnome_vfs_application_registry_get_applications to actually retrieve
	  all the applications rather than just pretending.

2002-04-21  Jody Goldberg <jody@gnome.org>

	* service-edit-dialog.c (service_edit_dialog_init) : fully disable the
	  already disable 'check content' field.  What the heck is this supposed
	  to do ?
	(fill_dialog) : ditto.
	(setup_add_dialog) : ditto.
	(store_data) : ditto.
	* file-types-properties.glade : ditto.  Having user visible widgets
	  that don't do anything is not a good idea.

2002-04-18  Jody Goldberg <jody@gnome.org>

	* file-types-capplet-dialogs.c (initialize_edit_applications_dialog) :
	  Add some accelerators to buttons.
	(nautilus_mime_type_capplet_show_change_extension_window) : ditto.
	(run_edit_or_new_application_dialog) : and to checkboxes
	(create_application_list_item) : simplify.  No need for a label and a
	  checkbox in an hbox.

	* file-types-properties.glade : Add some accelerators to buttons and
	  checkboxes.

2002-04-12  Jody Goldberg <jody@gnome.org>

	* mime-type-info.c (mime_type_info_save) : revert part of Lauris's
	  changes that were stripping off the first character of the category.

Wed Apr 10 18:04:10 2002  Jonathan Blandford  <jrb@gnome.org>

	* file-types.desktop.in (Exec): s/gnome2/gnome

2002-04-10  Jody Goldberg <jody@gnome.org>

	* mime-type-info.c (get_category) : make case insensitive.

2002-04-07  Jody Goldberg <jody@gnome.org>

	* file-types-properties.glade : assign response ids to the buttons.

	* file-types-capplet.c (apply_cb) : delete and merge into.
	(cb_file_type_dialog_response) : here.
	(create_dialog) : connect to reponse here.