@@ -1,5 +1,13 @@
 2002-04-22  Jody Goldberg <jody@gnome.org>
 
+	* mime-edit-dialog.c (validate_data) : tidy up.
+	(choose_cat_cb) : reorder buttons to be hig compliant.
+	(mime_edit_dialog_init) : ditto.
+	* service-edit-dialog.c (service_edit_dialog_init) : ditto.
+	* mime-category-edit-dialog.c (mime_category_edit_dialog_init) : ditto.
+
+2002-04-22  Jody Goldberg <jody@gnome.org>
+
 	* service-edit-dialog.c (service_edit_dialog_set_prop) : set dialog
 	  title correctly when adding a service.
 	* mime-edit-dialog.c (mime_edit_dialog_set_prop) : ditto.
